--- a/Furniture-Moving-Project/pom.xml
+++ b/Furniture-Moving-Project/pom.xml
@@ -62,6 +62,14 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <!-- Gửi email -->
+  <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-mail</artifactId>
+  </dependency>
+
+  
   </dependencies>
 
   <build>
