--- a/Furniture-Moving-Project/src/main/resources/application.properties
+++ b/Furniture-Moving-Project/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Furniture-Moving-Project
+
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=FurnitureTransportPlatform;encrypt=false
 spring.datasource.username=sa
 spring.datasource.password=123456789
@@ -8,5 +9,23 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
-# Trang login custom
 server.error.whitelabel.enabled=false
+
+# --- Mail (Gmail SMTP khuyên dùng App Password) ---
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=phamchiza123@gmail.com
+spring.mail.password=yesy facv metp zemu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.default-encoding=UTF-8
+
+# Debug & timeout để soi lỗi gửi mail
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+
+# From mặc định (sẽ fallback về spring.mail.username nếu không set)
+app.mail.from=YOUR_GMAIL@gmail.com
