--- a/Furniture-Moving-Project/pom.xml
+++ b/Furniture-Moving-Project/pom.xml
@@ -62,6 +62,13 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+
+      <!-- ThymeLeaf -->
+
+      <dependency>
+          <groupId>nz.net.ultraq.thymeleaf</groupId>
+          <artifactId>thymeleaf-layout-dialect</artifactId>
+      </dependency>
   </dependencies>
 
   <build>
