--- a/Furniture-Moving-Project/src/main/resources/application.properties
+++ b/Furniture-Moving-Project/src/main/resources/application.properties
@@ -1,12 +1,18 @@
 spring.application.name=Furniture-Moving-Project
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=FurnitureTransportPlatform;encrypt=false
 spring.datasource.username=sa
-spring.datasource.password=123456789
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-spring.jpa.hibernate.ddl-auto=none
+
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
 # Trang login custom
 server.error.whitelabel.enabled=false
+
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
