--- a/Furniture-Moving-Project/src/main/resources/application.properties
+++ b/Furniture-Moving-Project/src/main/resources/application.properties
@@ -29,3 +29,6 @@ spring.mail.properties.mail.smtp.writetimeout=10000
 
 # From mặc định (sẽ fallback về spring.mail.username nếu không set)
 app.mail.from=YOUR_GMAIL@gmail.com
+
+#auto reload when ctrl s
+spring.devtools.livereload.enabled=true
