--- a/Furniture-Moving-Project/pom.xml
+++ b/Furniture-Moving-Project/pom.xml
@@ -69,6 +69,16 @@
     <artifactId>spring-boot-starter-mail</artifactId>
   </dependency>
 
+  <!--Ctrl s reload web-->
+
+  <dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-devtools</artifactId>
+  <scope>runtime</scope>
+  <optional>true</optional>
+</dependency>
+
+
   
   </dependencies>
 
