--- a/Furniture-Moving-Project/src/main/resources/application.properties
+++ b/Furniture-Moving-Project/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+server.port=8080
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
