--- a/Furniture-Moving-Project/src/main/resources/application.properties
+++ b/Furniture-Moving-Project/src/main/resources/application.properties
@@ -34,3 +34,5 @@ app.mail.from=YOUR_GMAIL@gmail.com
 
 #auto reload when ctrl s
 spring.devtools.livereload.enabled=true
+
+logging.level.org.springframework.security=DEBUG
