Payment updated BE

--- a/Furniture-Moving-Project/src/main/resources/application.properties
+++ b/Furniture-Moving-Project/src/main/resources/application.properties
@@ -34,3 +34,10 @@ app.mail.from=YOUR_GMAIL@gmail.com
 
 #auto reload when ctrl s
 spring.devtools.livereload.enabled=true
+
+
+vietqr.bankCode=bidv
+vietqr.accountNumber=5130844686
+vietqr.accountName=TRINH THAI HOANG
+payment.expireMinutes=15
+payment.addInfoPrefix=REQ
