--- a/Furniture-Moving-Project/src/main/resources/application.properties
+++ b/Furniture-Moving-Project/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Furniture-Moving-Project
 # --- Database ---
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=FurnitureTransportPlatform;encrypt=false
 spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 server.port=8080
